tests/NormalTests/paczka1/fuzzy1/80039397.err
Error in line 6: GL2 A19 72,0
Error in line 7: 8a8caQhDol S493 88,9
Error in line 17: A288 A19 63,5
Error in line 21: 8a8caQhDol A19 151,6
Error in line 24: 8a8caQhDol A69 99,4
